# semantics_of_geometrical_figures

./: README.md  dune-project
lib/: dune  figure_utils.ml
test/: dune  test_geo_semantics.ml
